fix(dragger-editor): fix some layout bug

--- a/packages/application/dragger-editor/src/components/Left/Left.css
+++ b/packages/application/dragger-editor/src/components/Left/Left.css
@@ -1,6 +1,6 @@
 .left {
   width: 18%;
-  height: 800px;
+  height: 100vh;
   float: left;
   background-color: white;
 }
